Nuevas imagenes y demas fixes

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Shipupi",
-  "name": "Shipupi - Invitacion Digital",
+  "short_name": "Invitacion - Brian y Chelu",
+  "name": "Invitacion al casamiento de  Brian y Chelu",
   "theme_color": "#fff",
   "background_color": "#103AB9",
   "display": "standalone",
