--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "duck-timer": "^1.0.3",
+    "firebase": "^9.9.3",
     "pinia": "^2.0.13",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24",
